packages/gcn_spirv/src/snapshots/exec__deps__lib_sce_gnm_driver__translate__tests__test-2.snap
---
source: packages/exec/src/deps/lib_sce_gnm_driver/translate/mod.rs
expression: shader.debug()
---
[
    Instruction {
        inner: SMEM(
            SMEMInstruction {
                op: s_load_dwordx4,
                offset: 0,
                imm: true,
                sbase: 1,
                sdst: ScalarGPR(
                    4,
                ),
            },
        ),
        literal_constant: None,
        program_counter: 0,
    },
    Instruction {
        inner: SOPP(
            SOPPInstruction {
                op: s_waitcnt,
                simm16: 127,
            },
        ),
        literal_constant: None,
        program_counter: 4,
    },
    Instruction {
        inner: MUBUF(
            MUBUFInstruction {
                op: buffer_load_format_xyz,
                offset: Offset(
                    0,
                ),
                offen: false,
                idxen: true,
                glc: false,
                addr64: false,
                lds: false,
                vaddr: VectorGPR {
                    register_idx: 0,
                },
                vdata: VectorGPR {
                    register_idx: 4,
                },
                srsrc: ScalarGeneralPurposeRegisterGroup {
                    value: 1,
                },
                slc: false,
                tfe: false,
                soffset: 128,
            },
        ),
        literal_constant: None,
        program_counter: 8,
    },
    Instruction {
        inner: SMEM(
            SMEMInstruction {
                op: s_load_dwordx4,
                offset: 4,
                imm: true,
                sbase: 1,
                sdst: ScalarGPR(
                    4,
                ),
            },
        ),
        literal_constant: None,
        program_counter: 16,
    },
    Instruction {
        inner: SOPP(
            SOPPInstruction {
                op: s_waitcnt,
                simm16: 127,
            },
        ),
        literal_constant: None,
        program_counter: 20,
    },
    Instruction {
        inner: MUBUF(
            MUBUFInstruction {
                op: buffer_load_format_xy,
                offset: Offset(
                    0,
                ),
                offen: false,
                idxen: true,
                glc: false,
                addr64: false,
                lds: false,
                vaddr: VectorGPR {
                    register_idx: 0,
                },
                vdata: VectorGPR {
                    register_idx: 8,
                },
                srsrc: ScalarGeneralPurposeRegisterGroup {
                    value: 1,
                },
                slc: false,
                tfe: false,
                soffset: 128,
            },
        ),
        literal_constant: None,
        program_counter: 24,
    },
    Instruction {
        inner: SOPP(
            SOPPInstruction {
                op: s_waitcnt,
                simm16: 0,
            },
        ),
        literal_constant: None,
        program_counter: 32,
    },
    Instruction {
        inner: SOP1(
            SOP1Instruction {
                op: s_setpc_b64,
                ssrc0: Destination(
                    ScalarGPR(
                        0,
                    ),
                ),
                sdst: ScalarGPR(
                    0,
                ),
            },
        ),
        literal_constant: None,
        program_counter: 36,
    },
]
