packages/gcn_spirv/src/snapshots/exec__deps__lib_sce_gnm_driver__translate__tests__vertex_shader_1.snap
---
source: packages/exec/src/deps/lib_sce_gnm_driver/translate/mod.rs
expression: shader.displayed()
---
0x0000: s_mov_b32 vcc_hi, 0x13
0x0008: s_load_dwordx4 s[12:15], s[2:3], 0x0
0x000c: s_load_dwordx4 s[16:19], s[2:3], 0x4
0x0010: s_load_dwordx4 s[20:23], s[2:3], 0x8
0x0014: s_waitcnt 0x7f
0x0018: buffer_load_format_xy v[4:5], v0, s[12:15], idxen, offset=0x0, soffset=0x80
0x0020: buffer_load_format_xyzw v[8:11], v0, s[16:19], idxen, offset=0x0, soffset=0x80
0x0028: buffer_load_format_xy v[12:13], v0, s[20:23], idxen, offset=0x0, soffset=0x80
0x0030: s_waitcnt 0x0
0x0034: s_buffer_load_dwordx4 s[0:3], s[8:11], 0x0
0x0038: s_buffer_load_dwordx4 s[4:7], s[8:11], 0x4
0x003c: s_buffer_load_dwordx4 s[12:15], s[8:11], 0x8
0x0040: s_buffer_load_dwordx4 s[8:11], s[8:11], 0xc
0x0044: s_waitcnt 0x7f
0x0048: v_mov_b32 v0, s3
0x004c: v_mov_b32 v1, s7
0x0050: v_mov_b32 v2, s15
0x0054: v_mov_b32 v3, s11
0x0058: v_mac_f32 v0, s1, v5
0x005c: v_mac_f32 v1, s5, v5
0x0060: v_mac_f32 v2, s13, v5
0x0064: v_mac_f32 v3, s9, v5
0x0068: v_mac_f32 v0, s0, v4
0x006c: v_mac_f32 v1, s4, v4
0x0070: v_mac_f32 v2, s12, v4
0x0074: v_mac_f32 v3, s8, v4
0x0078: v_mov_b32 v4, 0
0x007c: v_mov_b32 v5, 1.f
0x0080: exp pos0, v0, v1, v2, v3, done
0x0088: exp param0, v8, v9, v10, v11
0x0090: exp param1, v12, v13, v4, v5
0x0098: s_endpgm 0x0
